--- a/NN.ipynb
+++ b/NN.ipynb
@@ -383,14 +383,7 @@
     "    ax2.legend()\n",
     "    ax2.set_xlabel('Epochs')\n",
     "    ax2.set_title('Error rate')\n",
-    "    plt.show()\n",
-    "    \n",
-    "#     plt.plot(acc_test, label='Test')\n",
-    "#     plt.plot(acc_train, label='Train')\n",
-    "#     plt.legend()\n",
-    "#     plt.title('Accuracy')\n",
-    "#     plt.xlabel('Epochs')\n",
-    "#     plt.show()"
+    "    plt.show()"
    ]
   },
   {
